# panda

./: CMakeLists.txt  Dockerfile  Dockerfile.dockerignore  Makefile  Makefile_configuration.mk  Makefile_configuration_variables.mk  Makefile_implicit_rules.mk  Makefile_rules.mk  Makefile_variables.mk  README.md  configure  doxygen.conf  input_format.md  install.md  usage.md
samples/panda_format/: sample_1  sample_2  sample_3  sample_4  sample_5
samples/porta_format/: sample_1  sample_2  sample_3  sample_4  sample_5
src/: algorithm_classes.beti  algorithm_classes.cpp  algorithm_classes.eti  algorithm_classes.h  algorithm_fourier_motzkin_elimination.beti  algorithm_fourier_motzkin_elimination.cpp  algorithm_fourier_motzkin_elimination.eti  algorithm_fourier_motzkin_elimination.h  algorithm_inequality_operations.beti  algorithm_inequality_operations.cpp  algorithm_inequality_operations.eti  algorithm_inequality_operations.h  algorithm_integer_operations.beti  algorithm_integer_operations.cpp  algorithm_integer_operations.eti  algorithm_integer_operations.h  algorithm_map_operations.beti  algorithm_map_operations.cpp  algorithm_map_operations.eti  algorithm_map_operations.h  algorithm_matrix_operations.beti  algorithm_matrix_operations.cpp  algorithm_matrix_operations.eti  algorithm_matrix_operations.h  algorithm_rotation.beti  algorithm_rotation.cpp  algorithm_rotation.eti  algorithm_rotation.h  algorithm_row_operations.beti  algorithm_row_operations.cpp  algorithm_row_operations.eti  algorithm_row_operations.h  application_name.h  big_integer.cpp  big_integer.h  big_integer_arithmetics.cpp  big_integer_comparisons.cpp  big_integer_constructors.cpp  bitset_fixed_size.cpp  bitset_fixed_size.h  (+112 more)
src/test/: algorithm_classes.cpp  algorithm_fourier_motzkin_elimination.cpp  algorithm_inequality_operations.cpp  algorithm_integer_operations.cpp  algorithm_map_operations.cpp  algorithm_matrix_operations.cpp  algorithm_row_operations.cpp  big_integer.cpp  big_integer_arithmetics.cpp  big_integer_comparisons.cpp  big_integer_constructors.cpp  bitset_fixed_size.cpp  bitset_variable_size.cpp  cast.cpp  concurrency.cpp  delayed_action.cpp  input_common.cpp  input_constraint_named_variables.cpp  input_constraint_unnamed_variables.cpp  input_detection.cpp  input_map.cpp  integer_type_detection.cpp  integer_type_selection.cpp  istream_peek_line.cpp  joining_thread.cpp  list.cpp  position_guarded_file.cpp  range.cpp  safe_integer.cpp  scope_guard.cpp  testing_gear.h
